--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar scroll</a>
+          <a class="navbar-brand" href="#">Data 받아와서 표시하기 Study</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -49,11 +49,11 @@
       <br>
     <div class="container">
         <div class="row">
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="card text-bg-light mb-3">
                     <div class="card-header">기본정보</div>
                     <div class="card-body">
-                      <h5 class="card-title">Light card title</h5>
+                      <h5 class="card-title">title</h5>
                       <p class="card-text">
                         <p id="시가총액"></p>
                         <p id="시가총액순위"></p>
@@ -66,11 +66,11 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12">
                 <div class="card text-bg-light mb-3">
                     <div class="card-header">그래프</div>
                     <div class="card-body">
-                      <h5 class="card-title">Light card title</h5>
+                      <h5 class="card-title">title</h5>
                       <p class="card-text">
                         <canvas id="myChart"></canvas>
                       </p>
@@ -83,18 +83,18 @@
                 <div class="card text-bg-light mb-3">
                     <div class="card-header">일일 정보</div>
                     <div class="card-body">
-                      <h5 class="card-title">Light card title</h5>
+                      <h5 class="card-title">Title</h5>
                       <p class="card-text">
                         <table class="table">
-                            <thead>
-                                <tr>
+                            <thead class="text-center">
+                                <tr >
                                     <th>날짜</th>
                                     <th>종가</th>
                                     <th>전일비</th>
                                     <th>거래량</th>
                                 </tr>
                             </thead>
-                            <tbody></tbody>
+                            <tbody class="text-center"></tbody>
 
                         </table>
                       </p>
